--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
-.App {
+:root {
+  --text-size: cl
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+*, *::before, *::after{
+  margin:0;
+  padding:0;
+  box-sizing: inherit;
+}
+
+body {
+  font-family: "Raleway", sans-serif;
+  background-image: url("../public/images/todoPic.webp");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+h1 {
+  font-size: clamp(3.8rem, 4vw, 4.2rem);
   text-align: center;
+  margin-bottom: 3%;
+  -webkit-text-fill-color: rgb(255, 255, 255, 0.01);
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: rgba(187, 19, 19, 0.74)
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+li {
+  font-size: clamp(1.2rem, 4vw, 1.6rem);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+li.ant-list-item.done{
+  text-decoration: line-through;
+  background-color: rgba(255, 0, 0, 0.763);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+main {
+  width: 89%;
+  margin: 0 auto;
+  margin-top: 3%;
+  background-color: rgba(153, 105, 105, 0.73);
+  padding: 15px;
+  border-radius: 23px;
+  border: 5px solid rgba(194, 226, 224, 0.589);
+  filter: drop-shadow(0px 0px 30px rgba(242, 240, 240, 0.931));
+
 }
 
-.App-link {
-  color: #61dafb;
+button.ant-btn {
+  background-color: purple;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+span.ant-input-affix-wrapper,
+input.ant-input {
+  background-color: ;
 }
+
