--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,6 @@ button.ant-btn {
 
 span.ant-input-affix-wrapper,
 input.ant-input {
-  background-color: ;
+  background-color: rgb(154, 135, 135);
 }
 
